--- a/WebApplication1/WebApplication1/ICT4Events.csproj
+++ b/WebApplication1/WebApplication1/ICT4Events.csproj
@@ -61,29 +61,44 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Mediasharing.aspx" />
+    <Content Include="MediaSharing\index.aspx" />
+    <Content Include="resource\style\theme.css" />
     <Content Include="Web.config" />
-    <Content Include="WebForm1.aspx" />
+    <Content Include="index.aspx" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Database.cs" />
-    <Compile Include="Mediasharing.aspx.cs">
-      <DependentUpon>Mediasharing.aspx</DependentUpon>
+    <Compile Include="Model\Category.cs" />
+    <Compile Include="Model\UserFile.cs" />
+    <Compile Include="Model\Database\Database.cs" />
+    <Compile Include="MediaSharing\index.aspx.cs">
+      <DependentUpon>index.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Mediasharing.aspx.designer.cs">
-      <DependentUpon>Mediasharing.aspx</DependentUpon>
+    <Compile Include="MediaSharing\index.aspx.designer.cs">
+      <DependentUpon>index.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Model\Contribution.cs" />
+    <Compile Include="Model\Database\MSDatabase.cs" />
+    <Compile Include="Model\Account.cs" />
+    <Compile Include="Model\Message.cs" />
+    <Compile Include="Model\Database\ADatabase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WebForm1.aspx.cs">
-      <DependentUpon>WebForm1.aspx</DependentUpon>
+    <Compile Include="index.aspx.cs">
+      <DependentUpon>index.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="WebForm1.aspx.designer.cs">
-      <DependentUpon>WebForm1.aspx</DependentUpon>
+    <Compile Include="index.aspx.designer.cs">
+      <DependentUpon>index.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="MediaSharing\Web.config" />
+    <None Include="MediaSharing\Web.Debug.config">
+      <DependentUpon>Web.config</DependentUpon>
+    </None>
+    <None Include="MediaSharing\Web.Release.config">
+      <DependentUpon>Web.config</DependentUpon>
+    </None>
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
