--- a/WebApplication1/WebApplication1/ICT4Events.csproj
+++ b/WebApplication1/WebApplication1/ICT4Events.csproj
@@ -43,6 +43,7 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>Resources\Oracle.DataAccess.dll</HintPath>
     </Reference>
+    <Reference Include="System.DirectoryServices" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -89,6 +90,7 @@
     <Compile Include="EventManagement\Locatie.cs" />
     <Compile Include="EventManagement\Plek.cs" />
     <Compile Include="EventManagement\specification.cs" />
+    <Compile Include="LdapAuthentication.cs" />
     <Compile Include="Model\Category.cs" />
     <Compile Include="Model\Database\EMDatabase.cs" />
     <Compile Include="Model\Database\UMDatabase.cs" />
