--- a/WebApplication1/WebApplication1/ICT4Events.csproj
+++ b/WebApplication1/WebApplication1/ICT4Events.csproj
@@ -123,6 +123,7 @@
     <Compile Include="UserManagement\index.aspx.designer.cs">
       <DependentUpon>index.aspx</DependentUpon>
     </Compile>
+    <Compile Include="UserManagement\Reservation.cs" />
     <Compile Include="UserManagement\User.cs" />
   </ItemGroup>
   <ItemGroup>
